--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
